packages/next-swc/crates/core/tests/errors/next-font-loaders/spread-arg/output.js
import inter from 'next/font/target.module.css?{"arguments":[{},[]],"import":"Inter","loader":"@next/font/google","path":"pages/test.tsx"}';
const a = fn(...{}, ...[]);
